Upgrade to Spring Boot 3, Java 21, fix mappers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
