--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,8 @@
 ############# Database Properties ##################
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${JDBC_DATABASE_URL:${DATABASE_URL:}}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:${DATABASE_USERNAME:}}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:${DATABASE_PASSWORD:}}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
