--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,21 @@
 spring.datasource.url=${JDBC_DATABASE_URL:${DATABASE_URL:}}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:${DATABASE_USERNAME:}}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD:${DATABASE_PASSWORD:}}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.open-in-view=false
+
+############# Application URL ##################
+app.url=${APP_URL:https://redditmvp-19af7fe1e209.herokuapp.com}
+
+############# JWT Properties ##################
+jwt.expiration.time=${JWT_EXPIRATION_TIME:90000}
+
+############# Mail Properties ##################
+spring.mail.host=${MAIL_HOST:smtp.mailtrap.io}
+spring.mail.port=${MAIL_PORT:25}
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
+spring.mail.protocol=${MAIL_PROTOCOL:smtp}
+spring.mail.from=${MAIL_FROM:no-reply@redditmvp.local}
